implement 2 keys bind query by id+datatype
